# EmerLang

./: .gitignore  LICENSE  README.md  codebook.json  emlang.py  out.em  pyproject.toml  roundtrip.txt  sample.dec.txt  sample.em  sample.txt
examples/corpora/: mini_en.txt
src/emerlang/: __init__.py  cli.py  codebook.py  decoder.py  encoder.py  tokenize.py  utils.py
src/emerlang/gui/: emerlang_gui.py
src/emlang/: __init__.py  cli.py  codebook.py  decoder.py  encoder.py  interactive.py  tokenize.py
src/emlang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/emlang/gui/: emerlang_gui.py
