[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emlang"
version = "3.0.2"
description = "EmerLang — emergent-looking codec (unified): CLI + interactive mode. Not crypto."
readme = "README.md"
authors = [{name = "Your Name"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["typer>=0.12.3"]
keywords = ["art", "codec", "emergent language", "toy", "education"]

[project.urls]
Homepage = "https://github.com/YOUR-USER/emlang"
Repository = "https://github.com/YOUR-USER/emlang"

[project.scripts]
emlang = "emlang.cli:app"
emlang-interactive = "emlang.interactive:main"
