[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emerlang"
version = "3.2.0"
description = "EmerLang — emergent-looking codec with CLI and PySide6 GUI. Not cryptography."
readme = "README.md"
authors = [{name = "Your Name"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
  "typer>=0.12.3",
  "PySide6>=6.6"
]
keywords = ["art", "codec", "emergent language", "toy", "education"]

[project.urls]
Homepage = "https://github.com/YOUR-USER/emerlang"
Repository = "https://github.com/YOUR-USER/emerlang"

[project.scripts]
emerlang = "emerlang.cli:app"
emerlang-gui = "emerlang.gui.emerlang_gui:main"

[tool.setuptools.packages.find]
where = ["src"]
